--- a/css/icon.css
+++ b/css/icon.css
@@ -61,6 +61,7 @@
     align-items: center;
     position: absolute;
     width: 100%;
+    height: 100%;
 }
 
 .profile-image {
@@ -78,5 +79,60 @@
 .current-image {
     width: 100%;
     height: 100%;
-    border-radius: 8px;
+    animation-duration: 1s;
+    animation-name: pulse;
+    border-radius: 10%;
+    -webkit-user-select: none;
+    margin: auto;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0;
+        -ms-transform: rotate(20deg);
+        transform: rotate(20deg);
+        transform: translate(200px);
+    }
+    20% {
+        opacity: 0.2;
+    }
+    40% {
+        opacity: 0.4;
+    }
+    60% {
+        opacity: 0.6;
+    }
+    80% {
+        opacity: 0.8;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.pagination {
+    display: inline-block;
+    border: 1px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    margin: 0 4px;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+
+.pagination a.active {
+    background-color: black;
+    color: white;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
 }
